2004-07-06  Carl Hetherington  <inkscape@carlh.net>

	* src/seltrans.cpp, src/sp-namedview.cpp,
	src/display/bezier-utils.cpp, src/libnr/nr-types.cpp:
	isnan appears to need a std:: namespace qualifier.

2004-07-06  Ted Gould  <ted@gould.cx>

	* src/libnr/nr-point.h, src/libnr/nr-rect.h:

	Adding in a function to round the points and rectangles.  Using this
	for less precise comparisons.  Also, added in a function to print
	each of these.

	* src/dialogs/export.cpp:

	Major revisions to do all kinds of fun stuff.  The major one being
	that filenames and and dpi's can now be stored on selections.  This
	makes it so that people working on a section of a document can export
	it consistently.

2004-07-06  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-typeset-utils.h: Greatly reduce #includes.

	* src/color-rgba.h, src/Makefile_insert, src/desktop.h:
	  Move ColorRGBA from desktop.h to new file color-rgba.h.
	* src/desktop.cpp, src/dropper-context.cpp: #include it.

2004-07-05  Kees Cook  <kees@outflux.net>

	* src/dialogs/desktop-properties.cpp, src/dialogs/rdf.cpp,
	  src/dialogs/rdf.h: added multiline data entry items, reduced
	  overall width of the dialog, and created the license entry areas.
	  Auto-detection of license on load works now.

2004-07-05  MenTaLguY <mental@rydia.net>

	* src/desktop.cpp: comitted further work which gives us a
	  partially-functional layers menu (not actually hooked up to
	  change layers yet), and it is not always updated when it needs
	  to be (yet).  It does also fix the crash though.

	* src/desktop.cpp, src/desktop.h, src/document.cpp,
	  src/sp-item-group.cpp, src/sp-item-group.h:

	  additional layers work; backed off on promoting siblings to
	  layers automatically and reintroduced "global" layer mode

2004-07-05  Carl Hetherington <inkscape@carlh.net>

	* src/desktop.cpp: prevent crash by adding a check for 
	layer == NULL to SPDesktopWidget::_buildLayerStatusMenuItem.
